Корректировка чек-бокс

--- a/css/styles.css
+++ b/css/styles.css
@@ -938,6 +938,7 @@ img {
   background-image: url(../images/icon-check.svg);
   background-size: contain;
   background-origin: border-box;
+  background-repeat:no-repeat;
 }
 .mdl-label-agree {
   margin-right: 4px;
