--- a/css/styles.css
+++ b/css/styles.css
@@ -932,7 +932,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mdl-checkbox:checked + .mdl-icon-checkbox {
+.mdl-checkbox:checked + .mdl-icon-checkbox,
+.mdl-checkbox:focus +.mdl-icon-checkbox {
   border-color: var(--accent-color);
   background-color: var(--accent-color);
   background-image: url(../images/icon-check.svg);
