--- a/css/styles.css
+++ b/css/styles.css
@@ -540,7 +540,7 @@ img {
   background-color: var(--accent-color);
 }
 
-.ft-subscribe-container{
+.ft-subscribe-container {
   margin-left: auto;
 }
 .ft-subscription {
@@ -929,18 +929,23 @@ img {
   margin-right: 8px;
   border: 2px solid var(--header-color);
   border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mdl-checkbox:checked + .mdl-icon-checkbox,
-.mdl-checkbox:focus +.mdl-icon-checkbox {
+.mdl-checkbox:checked + .mdl-icon-checkbox {
   border-color: var(--accent-color);
   background-color: var(--accent-color);
   background-image: url(../images/icon-check.svg);
   background-size: contain;
   background-origin: border-box;
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
 }
+
+.mdl-checkbox:focus + .mdl-icon-checkbox {
+  border-color: var(--accent-color);
+}
+
 .mdl-label-agree {
   margin-right: 4px;
 }
